# predicting_user_behavior_in_the_marketplace

./: .gitignore  README.md  m4s22_marketplace.ipynb  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
